--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,7 @@ dependencies {
         implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
 //
 //    implementation group: 'com.google.guava', name: 'guava', version: '31.1-jre'
+    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.4'
 
 
 }
