RDS 연결완료, 음식 주단위, 일단위 조회 완료

--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,9 @@ dependencies {
 //    implementation group: 'com.google.guava', name: 'guava', version: '31.1-jre'
     implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.4'
 
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
+
+
 
 }
 
