Docker 추가, batch size 축소, 음식 좋아요 싫어요 기능 구현

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,8 +15,8 @@ spring:
       ddl-auto: update
     properties:
       hibernate:
-        show_sql: true
-        default_batch_fetch_size: 100
+#        show_sql: true
+        default_batch_fetch_size: 10
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
