#34 secret yml 파일 참조

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,11 @@
 spring:
   application:
     name: myongsikMain
+
+  profiles:
+    include:
+      secret
+
   jpa:
     hibernate:
       ddl-auto: update
