--- a/.github/workflows/CD-Dev.yml
+++ b/.github/workflows/CD-Dev.yml
@@ -77,5 +77,5 @@ jobs:
           key: ${{ secrets.EC2_KEY }}
           script: |
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/myongsik-dev
-            sudo docker run -d —name myongsick_dev -v /etc/localtime:/etc/localtime:ro -e JAVA_OPTS=-Djasypt.encryptor.password=${{ secrets.YML_PASSWORD }} -e TZ=Asia/Seoul -e ENVIRONMENT_VALUE=-Dspring.profiles.active=dev -p 8081:8080 ${{ secrets.DOCKER_USERNAME }}/myongsik-dev
+            sudo docker run -d —name myongsick_dev -v /etc/localtime:/etc/localtime:ro -e JAVA_OPTS=-Djasypt.encryptor.password=${{ secrets.YML_PASSWORD }} -e TZ=Asia/Seoul -e ENVIRONMENT_VALUE=-Dspring.profiles.active=dev -p 8081:8080 ${{ secrets.DOCKER_USERNAME }}/myongsik-dev:latest
             docker rmi -f $(docker images -f "dangling=true" -q)
