#34 도커 실행 중인 컨테이너 중지 구문 추가

--- a/.github/workflows/CD-Dev.yml
+++ b/.github/workflows/CD-Dev.yml
@@ -76,6 +76,8 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_KEY }}
           script: |
+            docker stop myongsick_dev
+            docker rm myongsick_dev
             sudo docker pull ${{ secrets.DOCKER_USERNAME }}/myongsik-dev
-            sudo docker run -d —name myongsick_dev -v /etc/localtime:/etc/localtime:ro -e JAVA_OPTS=-Djasypt.encryptor.password=${{ secrets.YML_PASSWORD }} -e TZ=Asia/Seoul -e ENVIRONMENT_VALUE=-Dspring.profiles.active=dev -p 8081:8080 ${{ secrets.DOCKER_USERNAME }}/myongsik-dev:latest
+            sudo docker run -d --name myongsick_dev -v /etc/localtime:/etc/localtime:ro -e JAVA_OPTS=-Djasypt.encryptor.password=${{ secrets.YML_PASSWORD }} -e TZ=Asia/Seoul -e ENVIRONMENT_VALUE=-Dspring.profiles.active=dev -p 8081:8080 ${{ secrets.DOCKER_USERNAME }}/myongsik-dev:latest
             docker rmi -f $(docker images -f "dangling=true" -q)
