--- a/.github/workflows/CD_Prod.yml
+++ b/.github/workflows/CD_Prod.yml
@@ -9,7 +9,7 @@ name: Java CD with Gradle
 
 on:
   pull_request:
-    branches: [ "develop" ]
+    branches: [ "main" ]
 
 permissions: write-all
 
@@ -64,9 +64,9 @@ jobs:
       - name: docker build and push
         run: |
           docker login -u ${{ secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
-          docker build -f Dockerfile -t myongsick_dev .
-          docker tag myongsick_dev ${{ secrets.DOCKER_USERNAME }}/myongsik-dev
-          docker push ${{ secrets.DOCKER_USERNAME }}/myongsik-dev
+          docker build -f Dockerfile -t myongsik_prod1 .
+          docker tag myongsik_prod1 ${{ secrets.DOCKER_USERNAME }}/myongsik
+          docker push ${{ secrets.DOCKER_USERNAME }}/myongsik
 
       # 9) Deploy
       - name: Deploy
@@ -76,8 +76,8 @@ jobs:
           username: ${{ secrets.EC2_USERNAME }}
           key: ${{ secrets.EC2_KEY }}
           script: |
-            docker stop myongsick_dev
-            docker rm myongsick_dev
-            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/myongsik-dev
-            sudo docker run -d --name myongsick_dev -v /etc/localtime:/etc/localtime:ro -e JAVA_OPTS=-Djasypt.encryptor.password=${{ secrets.YML_PASSWORD }} -e TZ=Asia/Seoul -e ENVIRONMENT_VALUE=-Dspring.profiles.active=dev -p 8081:8080 ${{ secrets.DOCKER_USERNAME }}/myongsik-dev:latest
+            docker stop myongsik_dev
+            docker rm myongsik_dev
+            sudo docker pull ${{ secrets.DOCKER_USERNAME }}/myongsik
+            sudo docker run -d --name myongsik_prod1 -v /etc/localtime:/etc/localtime:ro -e JAVA_OPTS=-Djasypt.encryptor.password=${{ secrets.YML_PASSWORD }} -e TZ=Asia/Seoul -e ENVIRONMENT_VALUE=-Dspring.profiles.active=prod -p 8081:8080 ${{ secrets.DOCKER_USERNAME }}/myongsik:latest
             docker rmi -f $(docker images -f "dangling=true" -q)
