#47 음식 일, 주 단위 조회 추가, 지역 추가, 식단 추가, 식단 한번에 추가 기능 구현 완료

--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.4'
 
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
+    implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.4'
 }
 
 tasks.named('test') {
