--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.4'
 
     // mongo
-    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+//    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 
     implementation group: 'io.swagger.core.v3', name: 'swagger-annotations', version: '2.2.2'
     implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
