ci 상태와 결과 출력 플로우 추가

--- a/.github/workflows/CI_Dev.yml
+++ b/.github/workflows/CI_Dev.yml
@@ -54,10 +54,23 @@ jobs:
     # (5) 테스트
     - name: Test with Gradle
       run: ./gradlew --info test
- 
+
+      # (7) 상테 확인
+    - name: Save sate
+      run: echo "{name}={value}" >> $GITHUB_STATE
+
+    - name: Set output
+      run : echo "{name}={value}" >> $GITHUB_OUTPUT
+
     # (6) 테스트 후 결과 파일 생성
     - name: Publish Unit Test Results
       uses: EnricoMi/publish-unit-test-result-action@v1
       if: ${{ always() }}  # 테스트가 실패하여도 Report를 보기 위해 `always`로 설정
       with:
         files: build/test-results/**/*.xml
+    # (7) 상테 확인
+    - name: Save sate
+      run: echo "{name}={value}" >> $GITHUB_STATE
+
+    - name: Set output
+      run : echo "{name}={value}" >> $GITHUB_OUTPUT
