--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     runtimeOnly 'mysql:mysql-connector-java'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.4'
+    implementation 'org.springframework.boot:spring-boot-starter-logging'
 
     // mongo
 //    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
