--- a/.github/workflows/CD_Prod.yml
+++ b/.github/workflows/CD_Prod.yml
@@ -67,6 +67,24 @@ jobs:
           docker build -f Dockerfile -t ${{ secrets.DOCKER_USERNAME }}/myongsik .
           docker push ${{ secrets.DOCKER_USERNAME }}/myongsik
 
+      # GET GitHub IP (5)
+      - name: get GitHub IP
+        id: ip
+        uses: haythem/public-ip@v1.2
+
+      # Configure AWS Credentials (6) - AWS 접근 권한 취득(IAM)
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-northeast-2
+
+      # Add github ip to AWS (7)
+      - name: Add GitHub IP to AWS
+        run: |
+          aws ec2 authorize-security-group-ingress --group-id ${{ secrets.AWS_SG_ID }} --protocol tcp --port 22 --cidr ${{ steps.ip.outputs.ipv4 }}/32
+
       # 9) Deploy (PROD1)
       - name: Deploy (PROD1)
         uses: appleboy/ssh-action@master
