--- a/build.gradle
+++ b/build.gradle
@@ -41,7 +41,7 @@ dependencies {
 //    implementation group: 'com.google.guava', name: 'guava', version: '31.1-jre'
     implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.4'
 
-    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.28'
+    implementation group: 'com.mysql', name: 'mysql-connector-j', version: '8.3.0'
     implementation 'org.springframework.boot:spring-boot-starter-validation:2.7.4'
 
     implementation 'com.google.code.gson:gson:2.8.7' // gson
